# api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml  flake.nix  rocket.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy.yml
crates/db_models/: Cargo.toml
crates/db_models/src/: app.rs  build.rs  domain.rs  invite.rs  lib.rs  oauth_app.rs  oauth_device_request.rs  schema.rs  team.rs  team_user.rs  token.rs  user.rs  whitelist.rs
crates/provisioner/: Cargo.toml
crates/provisioner/src/: lib.rs
crates/provisioner_cli/: Cargo.toml
crates/provisioner_cli/src/: main.rs
docker/: dev.Dockerfile  migrator.Dockerfile  prod-sccache.Dockerfile  prod.Dockerfile
migrations/2021-08-16-215552_create_users/: up.sql
migrations/2021-08-17-182510_create_tokens/: down.sql  up.sql
migrations/2021-08-17-205331_token_expiration/: down.sql  up.sql
migrations/2021-08-28-150018_create_teams/: down.sql  up.sql
migrations/2021-08-28-153817_create_team_users/: down.sql  up.sql
migrations/2021-09-01-025208_team_slug/: down.sql  up.sql
migrations/2021-09-07-193905_required_user_name/: down.sql  up.sql
migrations/2021-09-07-194641_create_apps/: down.sql  up.sql
migrations/2021-09-08-024001_unique_app_slug/: down.sql  up.sql
migrations/2021-09-09-200049_whitelist/: down.sql  up.sql
migrations/2021-09-24-043002_create_domains/: down.sql  up.sql
migrations/2021-09-24-152754_domains_cascade_delete/: up.sql
migrations/2021-10-02-215920_create_oauth_apps/: down.sql  up.sql
migrations/2021-10-03-020135_create_oauth_device_requests/: down.sql  up.sql
migrations/2021-10-07-222933_oauth_device_requests_update/: down.sql  up.sql
migrations/2021-10-09-164403_oauth_device_requests_cascade_delete/: up.sql
migrations/2021-11-28-235337_add_app_network_id/: down.sql  up.sql
migrations/2021-11-28-235512_unique_app_container_id/: down.sql  up.sql
migrations/2021-12-24-234212_create_builds/: down.sql  up.sql
migrations/2022-08-25-052916_invite/: down.sql  up.sql
migrations/2022-08-29-232653_invites/: down.sql  up.sql
openapi/: openapi.yaml
scripts/: deploy
src/: auth.rs  main.rs  provision.rs  schema.rs  slack.rs
src/api/: apps.rs  auth.rs  builds.rs  dev.rs  domains.rs  invites.rs  mod.rs  oauth.rs  teams.rs  users.rs
src/api/oauth/: device.rs  mod.rs
src/models/: app.rs  domain.rs  mod.rs  team.rs  team_user.rs  token.rs  user.rs
src/utils/: domain.rs  mod.rs  oauth_device.rs  slug.rs  token.rs  uri_serializer.rs  url_serializer.rs
