[package]
edition = "2018"
name = "haas_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4.7", features = ["postgres", "chrono"]}
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = {version = "0.11.4", features = ["json"]}
time = "0.2.25"

rocket = {version = "0.5.0-rc.1", features = ["json"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

db_models = {package = "haas_db_models", path = "crates/db_models"}

[dependencies.rocket_sync_db_pools]
default-features = false
features = ["diesel_postgres_pool"]
version = "0.1.0-rc.1"

[workspace]
members = [
	"crates/*"
]
