[package]
edition = "2018"
name = "haas_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1.4.8", features = ["postgres", "chrono"]}
dotenv = "0.15.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.7.0"
reqwest = {version = "0.11.6", features = ["json"]}
time = "0.2.25"

tokio = {version = "1.15.0", features = ["full"]}

rocket = {version = "0.5.0-rc.1", features = ["json"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
trust-dns-client = "0.20.3"

base64 = "0.13.0"
form_urlencoded = "1.0.1"

db_models = {package = "haas_db_models", path = "crates/db_models"}
provisioner = {package = "haas_provisioner", path = "crates/provisioner"}

jsonwebtoken = "7.2.0"

[dependencies.rocket_sync_db_pools]
default-features = false
features = ["diesel_postgres_pool"]
#version = "0.1.0-rc.1"
git = "https://github.com/threema-danilo/Rocket"
rev = "f95b7126760728e76b3be39721f59f466b988bd2"

[patch."https://github.com/threema-danilo/Rocket"]
rocket = {version = "0.5.0-rc.1"}

[workspace]
members = [
  "crates/*",
]
