[package]
name = "haas_db_models"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1.4.8", features = ["chrono"]}

serde = {version = "1.0", features = ["derive"]}
