[package]
name = "haas_provisioner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.11.0"
hyper = { version = "0.14.13", features = ["stream"] }
mktemp = "0.4.1"
thiserror = "1.0.29"
tokio = { version = "1", features = ["fs", "process"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.6.8", features = ["codec"] }
