[package]
name = "haas_provisioner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.11.0"
hyper = { version = "0.14.17", features = ["stream"] }
mktemp = "0.4.1"
thiserror = "1.0.30"
tokio = { version = "1", features = ["fs", "process", "macros"] }
tokio-stream = "0.1.8"
tokio-util = { version = "0.6.9", features = ["io"] }
diesel = { version = "1.4.8", features = ["postgres"] }
serde = { version = "1.0.132", features = ["derive"] }

db_models = { package = "haas_db_models", path = "../db_models" }
log = "0.4.14"
async-trait = "0.1.52"

[dependencies.caddy]
#path = "../../../caddy-rs"
git = "https://github.com/hack-as-a-service/caddy-rs"
rev = "0bf50a846bd19ab76f4496a64b85840bae0417b4"
