[package]
name = "haas_provisioner_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
futures-util = "0.3.17"
provisioner = {package = "haas_provisioner", path = "../provisioner"}
tokio = { version = "1.12.0", features = ["full"] }
