[package]
name = "haas_provisioner_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.50"
futures-util = "0.3.18"
provisioner = {package = "haas_provisioner", path = "../provisioner"}
tokio = { version = "1.14.0", features = ["full"] }
