[package]
name = "haas_provisioner_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
clap = "3.0.0-beta.5"
diesel = { version = "1.4.8", features = ["postgres"] }
futures-util = "0.3.26"
log = "0.4.14"
pretty_env_logger = "0.4.0"
provisioner = {package = "haas_provisioner", path = "../provisioner"}
tokio = { version = "1.14.0", features = ["full"] }
